--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,11 @@ repositories {
 }
 
 dependencies {
-    compileOnly "io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT"
+    compileOnly "io.papermc.paper:paper-api:1.20-R0.1-SNAPSHOT"
     compileOnly "us.dxtrus.commons:bukkit:2.1.5"
     compileOnly files("$rootDir/.libs/MythicDungeons-2.0.0-SNAPSHOT.jar")
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
 }
 
 def targetJavaVersion = 21
