--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,16 @@ version = '1.0'
 
 repositories {
     mavenCentral()
-    maven { url "https://repo.papermc.io/repository/maven-public/" }
+    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url "https://oss.sonatype.org/content/groups/public/" }
 }
 
 dependencies {
-    compileOnly "io.papermc.paper:paper-api:1.20-R0.1-SNAPSHOT"
+    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
     compileOnly files("$rootDir/.libs/MythicDungeons-2.0.0-SNAPSHOT.jar")
+    compileOnly 'net.kyori:adventure-text-minimessage:4.17.0'
+    compileOnly 'net.kyori:adventure-api:4.17.0'
+    compileOnly 'net.kyori:adventure-platform-bukkit:4.3.3'
     implementation("de.exlll:configlib-yaml:4.5.0")
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
