add libs to plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,8 @@ main: us.dxtrus.dungeonsterminals.DungeonsTerminals
 api-version: '1.20'
 depend:
   - MythicDungeons
+
+libraries:
+  - net.kyori:adventure-text-minimessage:4.17.0
+  - net.kyori:adventure-api:4.17.0
+  - net.kyori:adventure-platform-bukkit:4.3.3
