--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.github.goooler.shadow' version '8.1.7'
 }
 
 group = 'us.dxtrus'
@@ -48,3 +49,11 @@ processResources {
         expand props
     }
 }
+
+shadowJar {
+    relocate 'de.exlll.configlib', 'us.dxtrus.commons.config'
+
+    archiveClassifier.set('')
+}
+
+jar.dependsOn shadowJar
