--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     compileOnly 'net.kyori:adventure-text-minimessage:4.17.0'
     compileOnly 'net.kyori:adventure-api:4.17.0'
     compileOnly 'net.kyori:adventure-platform-bukkit:4.3.3'
-    implementation("de.exlll:configlib-yaml:4.5.0")
+    implementation "de.exlll:configlib-yaml:4.5.0"
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
 }
@@ -50,10 +50,10 @@ processResources {
     }
 }
 
+jar.dependsOn shadowJar
+
 shadowJar {
     relocate 'de.exlll.configlib', 'us.dxtrus.commons.config'
 
-    archiveClassifier.set('')
+    archiveClassifier.set('DIST')
 }
-
-jar.dependsOn shadowJar
